# atm-tools

./: .dockerignore  .gitconfig  .gitignore  .ycm_extra_conf.py  Cargo.toml  Cross.toml  DEVELOPMENT.md  LICENSE  README.md  clippy.toml  deny.toml  run.sh  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build-container.yml  dependabot.yml  release.yml
build-support/docker/: Dockerfile  adduser.sh  install-cargo-tools.sh  install-docker.sh  install-rust.sh
build-support/shell/common/: log.sh
build-support/shell/run/: config.sh
docs/: index.html
src/atm-cli/: Cargo.toml  README.md
src/atm-cli/src/: cli.rs  directives.rs  lib.rs  main.rs  storage.rs  utils.rs
src/atm-cli/src/directives/: estimate.rs  estimate_tar.rs  estimate_tar_gz.rs  gen.rs  gen_batch.rs  gen_single.rs  gen_tar.rs  gen_tar_gz.rs  partition.rs
src/atm-cli/src/storage/: batch_tar_file.rs  tar_archive.rs  tar_file.rs  tar_gz_file.rs
src/libatm/: Cargo.toml  README.md
src/libatm/src/: lib.rs  midi_event.rs  midi_file.rs  midi_note.rs
src/tarsplit/: Cargo.toml
src/tarsplit/src/: cli.rs  directives.rs  lib.rs  main.rs
