[package]
name = "atm"
version = "0.3.0"
authors = ["All The Music LLC <make.allthemusic@protonmail.com>"]
edition = "2018"

homepage = "https://allthemusic.info"
license = "CC-BY-4.0"
readme = "README.md"
repository = "https://github.com/allthemusicllc/atm-tools"

[dependencies]
flate2 = "1.0.23"
humansize = "1.1.1"
itertools = "0.10.2"
libatm = { path = "../libatm" }
pbr = "1.0.4"
structopt = "0.3.26"
tar = "0.4.38"
thiserror = "1.0.30"
