[package]
name = "libatm"
version = "0.1.0"
authors = ["All The Music LLC <make.allthemusic@protonmail.com>"]
edition = "2018"

homepage = "https://allthemusic.info"
license = "CC-BY-4.0"
readme = "README.md"
repository = "https://github.com/allthemusicllc/atm-tools"

[dependencies]
byteorder = "1.3.2"
thiserror = "1.0.11"
